2003-12-27  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/helper/bezier-utils.cpp: Simplifications & documentation.

2003-12-26  bulia byak <bulia@dr.com>

	* src/document.cpp: added rel2abs to sp_document_set_uri, simplified

	* src/document.cpp: removed rel2abs into dir-util

	* src/dir-util.cpp src/dir-util.h: moved rel2abs and abs2rel here

	* src/modules/svg.cpp: Cleaned up svg_save: removed extraneous setting of docbase and
	docname, moved uri_set before save, added comments

	* src/document.h src/document.cpp src/desktop.h src/desktop.cpp: item_at_point: add
	into_groups; group_at_point: new

	* src/selection.cpp: When selecting a group, deselect all its descendants to prevent
	double selection

	* src/select-context.cpp src/select-context.h: Added ctrl-click/ctrl-shift-click to
	select/add to selection regardless of grouping

	* src/verbs.cpp: 2 more mnemo changes 

2003-12-26  Nathan Hurst <njh@mail.csse.monash.edu.au>

	* libnr: moving towards a fully class based Point and Matrix.
	This change adds an initial sketch of matrix.

2003-12-26  MenTaLguY <mental@rydia.net>

	* configure.in: added Gtkmm dependency, removed AC_FUNC_MALLOC

2003-12-25  MenTaLguY <mental@rydia.net>

	* src/desktop.cpp: changed g_sprintf to g_strdup_printf

2003-12-25  Daniel Borgmann <spark@mayl.de>

	* src/interface.cpp src/verbs.cpp: Fixed a few more mnemonics (mostly
	duplicates) and changed shortcut labels to use uppercase letters like the 
	rest of the world. :-)

2003-12-25  Alexander Clausen <alex@skip86.com>

	* src/file.cpp src/main.cpp src/dialogs/export.cpp: Made error dialogs 
	  and progressbar transient and non-resizable; made export file selector
	  transient.

2003-12-24  bulia byak <bulia@dr.com>

	* src/select-context.cpp: Added statusbar update in a few places
 
	* src/interface.cpp: Changed order of keyboard modifiers. Split view and object menus.

	* src/verbs.cpp: A couple fixes in mnemonics to better match shortcuts
