@@ -34,4 +34,6 @@ void sp_menu_append_recent_documents (GtkWidget *menu);
 
 void sp_ui_dialog_title_string (sp_verb_t verb, gchar* c);
 
+void sp_ui_error_dialog (const gchar * message);
+
 #endif
